service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-shop-service
spec:
  type: NodePort
  selector:
    app: flask-shop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
